attempting to fix the inputs zooming on iphone

--- a/src/assets/styles/_globals.scss
+++ b/src/assets/styles/_globals.scss
@@ -41,7 +41,21 @@ section {
   padding: 2rem;
 }
 
-input,
-select {
-  font-size: 1rem;
+input[type='color'],
+input[type='date'],
+input[type='datetime'],
+input[type='datetime-local'],
+input[type='email'],
+input[type='month'],
+input[type='number'],
+input[type='password'],
+input[type='search'],
+input[type='tel'],
+input[type='text'],
+input[type='time'],
+input[type='url'],
+input[type='week'],
+select:focus,
+textarea {
+  font-size: 16px !important;
 }
